--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.23",
+    "graphql": "^14.0.2",
+    "graphql-yoga": "^1.17.0",
     "react": "^16.5.2",
+    "react-apollo": "^2.3.3",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.3"
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
